apps/infra/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pms
  labels:
    name: pms
    project: mental-health-pms
    compliance: hipaa
