apps/infra/kubernetes/registry-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: kube-system
spec:
  type: NodePort
  selector:
    app: registry
  ports:
    - name: registry
      port: 5000
      targetPort: 5000
      nodePort: 30500
---
# Note: This service assumes there's a registry pod/deployment with label app=registry
# If you need to expose the host machine's Docker registry directly,
# you might need to create an Endpoints resource or use a different approach
# since this service requires a pod selector to work properly.
